src/test/ui/resolve/token-error-correct-2.stderr
error: incorrect close delimiter: `)`
  --> $DIR/token-error-correct-2.rs:6:5
   |
LL |     if foo {
   |            - un-closed delimiter
LL |
LL |     )
   |     ^ incorrect close delimiter

error[E0425]: cannot find value `foo` in this scope
  --> $DIR/token-error-correct-2.rs:4:8
   |
LL |     if foo {
   |        ^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
